# tjc-xlwings-officejs-quickstart

./: .env.template  .gitignore  README.rst  manifest-xlwings-officejs-quickstart.xml  pyproject.toml  workbook.xlsx
tjc_xlwings_officejs_quickstart/: custom_functions.py  server_fastapi.py  taskpane.html
